# -RAG-

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  千问3微调实战操作记录.md  千问3微调实战操作记录_续集.md  虚拟机镜像地址.txt  项目环境配置&服务部署指南.md
eval/: H3C_LA2608_qa.csv  build_hard_negatives.py  evaluate_retrieval.py  evaluation_report.csv  evaluation_summary.txt  finetune_bge_m3.py  hak180产品安全手册.md  prompt.md  qa.csv  qa_demo.csv  training_data.json  training_data.json.bak  万用表_qa.csv  微调总结.md
eval/训练数据集/: HUAWEI_MateStation_qa.csv  HuggingFace_qa.csv  qa_demo.csv
knowledge/: .env  requirements.txt
knowledge/api/: import_router.py  metrics_router.py  query_router.py
knowledge/front/: chat.html  dashboard.html  import.html
knowledge/processor/import_processor/: base.py  config.py  state.py
knowledge/processor/import_processor/nodes/: document_split_node.py  embedding_chunks_node.py  item_name_recognition_node.py  md_to_img_node.py
knowledge/processor/query_processor/: base.py  config.py  state.py
knowledge/processor/query_processor/nodes/: answer_output_node.py  hyde_vector_search_node.py  reranker_node.py  web_mcp_search_node.py
knowledge/service/: query_service.py  upload_service.py
knowledge/temp_data/20260608/19db1751/: chunks.json
knowledge/temp_data/20260608/2705c6a3/: chunks.json
knowledge/temp_data/20260608/5180ca61/: chunks.json
knowledge/temp_data/20260608/6bcaf5f5/: chunks.json
knowledge/utils/: embedding_util.py  log_util.py  metrics_util.py  trace_util.py
knowledge/utils/client/: ai_clients.py  storage_clients.py
(+1 files in other folders)
